--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "classnames": "^2.2.6",
     "core-js": "^3.9.1",
+    "easyinvoice": "^2.0.11",
     "enzyme": "^3.11.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
