--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "tailwindcss": "^3.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
