--- a/package.json
+++ b/package.json
@@ -31,11 +31,16 @@
     "@coreui/react-chartjs": "^1.1.0",
     "@coreui/utils": "^1.3.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
+    "antd": "^4.18.5",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "classnames": "^2.2.6",
     "core-js": "^3.9.1",
     "easyinvoice": "^2.0.11",
     "enzyme": "^3.11.0",
+    "html-to-pdfmake": "^2.3.8",
+    "jspdf": "^2.5.0",
+    "pdfmake": "^0.2.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
